--- a/package.json
+++ b/package.json
@@ -26,11 +26,13 @@
     "@nuxtjs/eslint-config": "^11.0.0",
     "@nuxtjs/eslint-module": "^3.1.0",
     "@nuxtjs/tailwindcss": "^5.3.3",
+    "autoprefixer": "^10.4.15",
     "eslint": "^8.24.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-nuxt": "^4.0.0",
     "eslint-plugin-vue": "^9.5.1",
-    "postcss": "^8.4.17",
-    "prettier": "^2.7.1"
+    "postcss": "^8.4.29",
+    "prettier": "^2.7.1",
+    "tailwindcss": "^3.3.3"
   }
 }
