--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
   "dependencies": {
     "@nuxtjs/axios": "^5.13.6",
     "@nuxtjs/pwa": "^3.3.5",
+    "@supabase/supabase-js": "^2.38.0",
     "core-js": "^3.25.3",
+    "dotenv": "^16.3.1",
     "nuxt": "^2.15.8",
     "vue": "^2.7.10",
     "vue-server-renderer": "^2.7.10",
@@ -28,6 +30,7 @@
     "@nuxtjs/eslint-config": "^11.0.0",
     "@nuxtjs/eslint-module": "^3.1.0",
     "@nuxtjs/fontawesome": "^1.1.2",
+    "@nuxtjs/supabase": "^1.1.3",
     "@nuxtjs/tailwindcss": "^5.3.3",
     "autoprefixer": "^10.4.15",
     "eslint": "^8.24.0",
